# c_template

./: .gitignore  CMakeLists.txt  README.md
config/: zlog.conf
include/: config.h  log.h  lwrb.h
src/: log.c  main.c
src/lwrb/: lwrb.c  untitled-1.bash
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_hello.c
